cka/solutions/08-gateway-api/thecloudguy/python.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-deploy
  labels:
    app: python-app
spec:
  selector:
    matchLabels:
      app: python-app
  replicas: 2
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
        - name: python-app
          image: aimvector/python:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "50m"
              memory: "10Mi"
            limits:
              cpu: "100m"
              memory: "100Mi"
---
kind: Service
apiVersion: v1
metadata:
  name: python-svc
spec:
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
