cka/solutions/08-gateway-api/thecloudguy/httproute-by-header.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: go-route
  namespace: default

spec:
  parentRefs:
    - name: gateway-api
      sectionName: http
      kind: Gateway

  hostnames:
    - example-app.localhost

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/go
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: X-Custom-Header
                value: "CustomHeaderValue"
              - name: Access-Control-Allow-Origin
                value: "http://localhost:8080"
              - name: Access-Control-Allow-Methods
                value: "GET, POST, PUT, DELETE, OPTIONS"
              - name: Access-Control-Allow-Headers
                value: "Content-Type, Authorization"
              - name: Access-Control-Max-Age
                value: "86400" # Cache preflight for 24 hours
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: go-svc
          port: 5000
          weight: 1
